@@ -51,7 +51,7 @@ $language_data = array(
         1 => array(
             'ACCUMULATE','APPLY','ASSIGN','BELL','QUERY',
             'BUFFER-COMPARE','BUFFER-COPY','CALL','CASE',
-            'CHOOSE','CLASS','CLEAR','CLOSE QUERY','each','WHERE',
+            'CHOOSE','CLASS','CLOSE QUERY','each','WHERE',
             'CLOSE STORED-PROCEDURE','COLOR','COMPILE','CONNECT',
             'CONSTRUCTOR','COPY-LOB','CREATE','CREATE ALIAS',
             'CREATE BROWSE','CREATE BUFFER','CREATE CALL','CREATE CLIENT-PRINCIPAL',
@@ -71,12 +71,12 @@ $language_data = array(
             'DISABLE','DISABLE TRIGGERS','DISCONNECT','DISPLAY',
             'DO','DOS','DOWN','DYNAMIC-CURRENT-VALUE',
             'ELSE','EMPTY TEMP-TABLE','ENABLE','END',
-            'ENTRY','EXPORT','FIND','AND',
+            'ENTRY','FIND','AND',
             'FIX-CODEPAGE','FOR','FORM','FRAME-VALUE',
             'GET','GET-KEY-VALUE','HIDE','IF',
             'IMPORT','INPUT CLEAR','INPUT CLOSE','INPUT FROM','input',
-            'INPUT THROUGH','INPUT-OUTPUT CLOSE','INPUT-OUTPUT THROUGH','INSERT',
-            'INTERFACE','LEAVE','LOAD','BREAK',
+            'INPUT THROUGH','INPUT-OUTPUT CLOSE','INPUT-OUTPUT THROUGH',
+            'INTERFACE','LEAVE','BREAK',
             'LOAD-PICTURE','MESSAGE','method','NEXT','prev',
             'NEXT-PROMPT','ON','OPEN QUERY','OS-APPEND',
             'OS-COMMAND','OS-COPY','OS-CREATE-DIR','OS-DELETE',
@@ -97,7 +97,7 @@ $language_data = array(
             'system-DIALOG PRINTER-SETUP','system-HELP','THEN','THIS-object',
             'TRANSACTION-MODE AUTOMATIC','TRIGGER PROCEDURE','UNDERLINE','UNDO',
             'UNIX','UNLOAD','UNSUBSCRIBE','UP','STRING',
-            'UPDATE','USE','USING','VALIDATE','substr','SKIP','CLOSE',
+            'UPDATE','USE','USING','substr','SKIP','CLOSE',
             'VIEW','WAIT-FOR','MODULO','NE','AVAIL',
             'NOT','OR','&GLOBAL-DEFINE','&IF','UNFORMATTED','NO-PAUSE',
             '&THEN','&ELSEIF','&ELSE','&ENDIF','OPEN','NO-WAIT',
@@ -129,21 +129,21 @@ $language_data = array(
             'ADD-LIKE-FIELD','ADD-LIKE-INDEX','ADD-NEW-FIELD','ADD-NEW-INDEX',
             'ADD-RELATION','ADD-SCHEMA-LOCATION','ADD-SOURCE-BUFFER','ADD-SUPER-PROCEDURE',
             'APPEND-CHILD','APPLY-CALLBACK','ATTACH-DATA-SOURCE','AUTHENTICATION-FAILED',
-            'BEGIN-EVENT-GROUP','BUFFER-COMPARE','BUFFER-COPY','BUFFER-CREATE',
-            'BUFFER-DELETE','BUFFER-FIELD','BUFFER-RELEASE','BUFFER-VALIDATE',
+            'BEGIN-EVENT-GROUP','BUFFER-CREATE',
+            'BUFFER-DELETE','BUFFER-RELEASE','BUFFER-VALIDATE',
             'CANCEL-BREAK','CANCEL-REQUESTS','CLEAR','CLEAR-APPL-CONTEXT',
             'CLEAR-LOG','CLEAR-SELECTION','CLEAR-SORT-ARROWS','CLONE-NODE',
-            'CLOSE-LOG','CONNECT','CONNECTED','CONVERT-TO-OFFSET',
+            'CLOSE-LOG','CONNECTED','CONVERT-TO-OFFSET',
             'COPY-DATASET','COPY-SAX-attributeS','COPY-TEMP-TABLE','CREATE-LIKE',
             'CREATE-NODE','CREATE-NODE-NAMESPACE','CREATE-RESULT-LIST-ENTRY','DEBUG',
             'DECLARE-NAMESPACE','DELETE-CHAR','DELETE-CURRENT-ROW',
             'DELETE-HEADER-ENTRY','DELETE-LINE','DELETE-NODE','DELETE-RESULT-LIST-ENTRY',
             'DELETE-SELECTED-ROW','DELETE-SELECTED-ROWS','DESELECT-FOCUSED-ROW','DESELECT-ROWS',
-            'DESELECT-SELECTED-ROW','DETACH-DATA-SOURCE','DISABLE','DISABLE-CONNECTIONS',
-            'DISABLE-DUMP-TRIGGERS','DISABLE-LOAD-TRIGGERS','DISCONNECT','DISPLAY-MESSAGE',
+            'DESELECT-SELECTED-ROW','DETACH-DATA-SOURCE','DISABLE-CONNECTIONS',
+            'DISABLE-DUMP-TRIGGERS','DISABLE-LOAD-TRIGGERS','DISPLAY-MESSAGE',
             'DUMP-LOGGING-NOW','EDIT-CLEAR','EDIT-COPY','EDIT-CUT',
             'EDIT-PASTE','EDIT-UNDO','EMPTY-DATASET','EMPTY-TEMP-TABLE',
-            'ENABLE','ENABLE-CONNECTIONS','ENABLE-EVENTS','ENCRYPT-AUDIT-MAC-KEY',
+            'ENABLE-CONNECTIONS','ENABLE-EVENTS','ENCRYPT-AUDIT-MAC-KEY',
             'END-DOCUMENT','END-ELEMENT','END-EVENT-GROUP','END-FILE-DROP',
             'EXPORT','EXPORT-PRINCIPAL','FETCH-SELECTED-ROW',
             'FILL','FIND-BY-ROWID','FIND-CURRENT','FIND-FIRST',
@@ -164,7 +164,7 @@ $language_data = array(
             'GET-TEXT-WIDTH-CHARS','GET-TEXT-WIDTH-PIXELS','GET-TOP-BUFFER','GET-TYPE-BY-INDEX',
             'GET-TYPE-BY-NAMESPACE-NAME','GET-TYPE-BY-QNAME','GET-URI-BY-INDEX','GET-VALUE-BY-INDEX',
             'GET-VALUE-BY-NAMESPACE-NAME','GET-VALUE-BY-QNAME','GET-WAIT-STATE','IMPORT-NODE',
-            'IMPORT-PRINCIPAL','INCREMENT-EXCLUSIVE-ID','INDEX-INFORMATION','INITIALIZE-DOCUMENT-TYPE',
+            'IMPORT-PRINCIPAL','INCREMENT-EXCLUSIVE-ID','INITIALIZE-DOCUMENT-TYPE',
             'INITIATE','INSERT','INSERT-attribute','INSERT-BACKTAB',
             'INSERT-BEFORE','INSERT-FILE','INSERT-ROW','INSERT-STRING',
             'INSERT-TAB','INVOKE','IS-ROW-SELECTED','IS-SELECTED',
@@ -175,7 +175,7 @@ $language_data = array(
             'MEMPTR-TO-NODE-VALUE','MERGE-CHANGES','MERGE-ROW-CHANGES','MOVE-AFTER-TAB-ITEM',
             'MOVE-BEFORE-TAB-ITEM','MOVE-COLUMN','MOVE-TO-BOTTOM','MOVE-TO-EOF',
             'MOVE-TO-TOP','NODE-VALUE-TO-LONGCHAR','NODE-VALUE-TO-MEMPTR','NORMALIZE',
-            'QUERY-CLOSE','QUERY-OPEN','QUERY-PREPARE','RAW-TRANSFER',
+            'QUERY-CLOSE','QUERY-OPEN','QUERY-PREPARE',
             'READ','READ-FILE','READ-XML','READ-XMLSCHEMA',
             'REFRESH','REFRESH-AUDIT-POLICY','REGISTER-DOMAIN','REJECT-CHANGES',
             'REJECT-ROW-CHANGES','REMOVE-attribute','REMOVE-CHILD','REMOVE-EVENTS-PROCEDURE',
@@ -205,14 +205,14 @@ $language_data = array(
             'AMBIGUOUS','ASC','AUDIT-ENABLED','AVAILABLE',
             'BASE64-DECODE','BASE64-ENCODE','CAN-DO','CAN-FIND',
             'CAN-QUERY','CAN-SET','CAPS','CAST','OS-DIR',
-            'CHR','CODEPAGE-CONVERT','COMPARE','CONNECTED',
+            'CHR','CODEPAGE-CONVERT','COMPARE',
             'COUNT-OF','CURRENT-CHANGED','CURRENT-RESULT-ROW','DATASERVERS',
             'DATA-SOURCE-MODIFIED','DATETIME','DATETIME-TZ',
             'DAY','DBCODEPAGE','DBCOLLATION','DBNAME',
             'DBPARAM','DBRESTRICTIONS','DBTASKID','DBTYPE',
             'DBVERSION','DECIMAL','DECRYPT','DYNAMIC-function',
             'DYNAMIC-NEXT-VALUE','ENCODE','ENCRYPT','ENTERED',
-            'ERROR','ETIME','EXP','FILL','ENDKEY','END-error',
+            'ERROR','ETIME','EXP','ENDKEY','END-error',
             'FIRST-OF','FRAME-DB','FRAME-DOWN',
             'FRAME-FIELD','FRAME-FILE','FRAME-INDEX','FRAME-LINE',
             'GATEWAYS','GENERATE-PBE-KEY','GENERATE-PBE-SALT','GENERATE-RANDOM-KEY',
@@ -228,21 +228,21 @@ $language_data = array(
             'KEYWORD','KEYWORD-ALL','LASTKEY',
             'LAST-OF','LC','LDBNAME','LEFT-TRIM',
             'LIBRARY','LINE-COUNTER','LIST-EVENTS','LIST-QUERY-ATTRS',
-            'LIST-SET-ATTRS','LIST-widgetS','LOCKED','LOG',
-            'LOGICAL','LOOKUP','MAXIMUM','MD5-DIGEST',
+            'LIST-SET-ATTRS','LIST-widgetS','LOCKED',
+            'LOGICAL','MAXIMUM','MD5-DIGEST',
             'MEMBER','MESSAGE-LINES','MINIMUM','MONTH',
-            'MTIME','NEW','NEXT-VALUE','NORMALIZE','SHARED',
+            'MTIME','NEW','NEXT-VALUE','SHARED',
             'NOT ENTERED','NOW','NUM-ALIASES','NUM-DBS',
             'NUM-ENTRIES','NUM-RESULTS','OPSYS','OS-DRIVES',
             'OS-ERROR','OS-GETENV','PAGE-NUMBER','PAGE-SIZE',
             'PDBNAME','PROC-HANDLE','PROC-STATUS','PROGRAM-NAME',
             'PROGRESS','PROVERSION','QUERY-OFF-END','QUOTER',
             'RANDOM','RAW','RECID','REJECTED',
-            'REPLACE','RETRY','RETURN-VALUE','RGB-VALUE',
+            'RETRY','RETURN-VALUE','RGB-VALUE',
             'RIGHT-TRIM','R-INDEX','ROUND','ROWID','LENGTH',
-            'SDBNAME','SEARCH','SET-DB-CLIENT','SETUSERID',
+            'SDBNAME','SET-DB-CLIENT','SETUSERID',
             'SHA1-DIGEST','SQRT','SUBSTITUTE','VARIABLE',
-            'SUPER','TERMINAL','TIME','TIMEZONE','external','ENTRY',
+            'SUPER','TERMINAL','TIME','TIMEZONE','external',
             'TODAY','TO-ROWID','TRIM','TRUNCATE','return',
             'TYPE-OF','USERID','VALID-EVENT','VALID-HANDLE',
             'VALID-object','WEEKDAY','YEAR','BEGINS','VALUE',
@@ -396,8 +396,8 @@ $language_data = array(
             'WINDOW-system','WORD-WRAP','WORK-AREA-HEIGHT-PIXELS','WORK-AREA-WIDTH-PIXELS',
             'WORK-AREA-X','WORK-AREA-Y','WRITE-STATUS','X','widget-Handle',
             'X-DOCUMENT','XML-DATA-TYPE','XML-NODE-TYPE','XML-SCHEMA-PATH',
-            'XML-SUPPRESS-NAMESPACE-PROCESSING','Y','YEAR-OFFSET','CHARACTER','INTEGER','LOGICAL',
-            'LONGCHAR','MEMPTR','DECIMAL','CHAR','DEC','INT','LOG','DECI','INTE','LOGI','long'
+            'XML-SUPPRESS-NAMESPACE-PROCESSING','Y','YEAR-OFFSET','CHARACTER',
+            'LONGCHAR','MEMPTR','CHAR','DEC','INT','LOG','DECI','INTE','LOGI','long'
             )
         ),
     'SYMBOLS' => array(
@@ -471,9 +471,15 @@ $language_data = array(
     'PARSER_CONTROL' => array(
         'KEYWORDS' => array(
             'DISALLOWED_BEFORE' => "(?<![\.\-a-zA-Z0-9_\$\#&])",
-            'DISALLOWED_AFTER' =>  "(?![\-a-zA-Z0-9_%])"
+            'DISALLOWED_AFTER' =>  "(?![\-a-zA-Z0-9_%])",
+            1 => array(
+                'SPACE_AS_WHITESPACE' => true
+                ),
+            2 => array(
+                'SPACE_AS_WHITESPACE' => true
+                )
+            )
         )
-    )
 );
 
 ?>
