@@ -20,6 +20,7 @@ Version 1.0.8.4
   -  Changed INT_BASIC number format to allow numbers followed . at EOL (BenBE)
   -  Improvements to language files (BenBE)
      * Removed some superfluous keywords from ABAP (BenBE)
+     * Removed duplicate keywords for Progress (BenBE)
      * Removed duplicate keywords for T-SQL (BenBE)
 Version 1.0.8.3
   -  Added language files
